fix whitespace

--- a/src/app/definition/project/project.component.css
+++ b/src/app/definition/project/project.component.css
@@ -118,6 +118,7 @@ span{
     display: flex;
     align-items: center;
     justify-content: space-around;
+    margin-top: 2em;
 }
 
 .ml{
